# cpbar

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  build-deb.sh  cpbar.py  cprm.py  install.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cpbar/: __init__.py  __main__.py  benchmark.py  core.py  operations.py  ui.py  utils.py
cprm/: __init__.py  __main__.py  benchmark.py  core.py  operations.py  ui.py  utils.py
tests/: test_copy.py  test_remove.py
